# acp-protocol

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html
reference-implementation/acp/cli/: __init__.py  main.py
reference-implementation/acp/models/: __init__.py  capability.py  envelope.py  manifest.py  memory.py  messages.py  workflow.py
reference-implementation/acp/orchestration/: __init__.py  scheduler.py
reference-implementation/acp/runtime/: __init__.py  agent.py  gateway.py  host.py  router.py
reference-implementation/acp/services/: __init__.py  discovery.py  identity.py  marketplace.py  memory.py  registry.py  security.py
reference-implementation/acp/transport/: __init__.py  event_bus.py
reference-implementation/acp_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reference-implementation/tests/: test_discovery_marketplace.py  test_envelope_security.py  test_memory_service.py  test_schemas.py  test_workflow_dag.py
schemas/: agent-manifest.schema.json  capability-token.schema.json  envelope.schema.json  memory-operation.schema.json  message.schema.json  workflow-dag.schema.json
sdk/typescript/: package-lock.json  package.json
spec/: 01-architecture-and-vision.md  02-components-and-roles.md  03-communication-and-transport.md  04-workflow-and-orchestration.md  05-distributed-memory.md  06-security-and-zero-trust.md  07-discovery-and-marketplace.md  08-runtime-and-observability.md  09-sdk-specifications.md  10-developer-experience-and-migration.md
(+2 files in other folders)
